kubernetes/apps/kellnr/kellnr/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kellnr
  namespace: kellnr
spec:
  hosts:
    - crates.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kellnr.kellnr.svc.cluster.local
            port:
              number: 8000
