kubernetes/apps/kellnr/kellnr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/v1/networkpolicy.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kellnr-app
  namespace: kellnr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kellnr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
